# cog

./: CMakeLists.txt
data/: Info.plist  lion.mtl
data/shaders/: .simple_fragment.glsl.swp  error_fragment.glsl  error_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl
osx/: GameView.h  GameView.mm  GameWindowDelegate.h  GameWindowDelegate.mm  main.mm
runner/: AssetLoader.cpp  AssetLoader.h  CircularBuffer.cpp  CircularBuffer.h  GameRunner.cpp  GameRunner.h
src/: Assets.cpp  Assets.h  BitMap.h  BuddyAllocator.h  Entities.cpp  Entities.h  Game.cpp  Game.h  Images.cpp  Images.h  Materials.cpp  Materials.h  Matrix4x4.h  Meshes.cpp  Meshes.h  Quaternion.h  Shaders.cpp  Shaders.h  TextureCubes.cpp  TextureCubes.h  Textures.cpp  Textures.h  Vector2.h  Vector3.h  gameApi.h  gameConfig.h  intMath.h
src/assetParsers/: imageParser.cpp  imageParser.h
src/components/: Cameras.cpp  Cameras.h  MeshRenderers.cpp  MeshRenderers.h  Transforms.cpp  Transforms.h
src/meshBuilders/: Quad.cpp  Quad.h  UVSphere.cpp  UVSphere.h
